# ThreadTool

./: CMakeLists.txt  README.md
include/: arghandler.h  rundata.h  threads.h
src/: main.c
src/lib/: arghandler.c  rundata.c  threads.c
